--- a/.github/workflows/action-cy-dashboard.yml
+++ b/.github/workflows/action-cy-dashboard.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Publish gh-pages
         uses: JamesIves/github-pages-deploy-action@master
         env:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
           FOLDER: mochawesome-report
           BUILD_SCRIPT: npm run report:generate
