--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "merge:reports": "mochawesome-merge > index.json",
     "generate:reports": "marge index.json --assetsDir cypress/videos",
     "clean:reports": "rm -rf mochawesome-report; rm -rf cypress/reports",
-    "report:generate": "npx mochawesome-merge ./mochawesome-report/json/mochawesome*.json > mochawesome-report/report.json && npx marge mochawesome-report/report.json --autoOpen --showPending=false"
+    "report:generate": "npx npm-run-all merge:reports generate:reports",
+    "allure:report": "allure generate allure-results",
+    "allure:clear": "rm -r allure-results/ allure-report || true",
+    "allure:open": "allure open allure-report"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,6 +61,8 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/instrument-cra": "^1.3.1",
+    "@shelex/cypress-allure-plugin": "^1.8.1",
+    "allure-commandline": "^2.13.0",
     "cypress-multi-reporters": "^1.4.0",
     "mocha": "^8.0.1",
     "mocha-junit-reporter": "^2.0.0",
