--- a/.github/workflows/action-sorry-cypress.yml
+++ b/.github/workflows/action-sorry-cypress.yml
@@ -23,7 +23,8 @@ jobs:
           record: true
           parallel: true
           ci-build-id: '${{ github.sha }}-${{ github.workflow }}-${{ github.event_name }}'
-          command: "sed -i -e 's|api_url:.*$|api_url: \"http:\/\/sorry-cypress-tdc-33050344.sa-east-1.elb.amazonaws.com:8080\/\"|g' /home/runner/.cache/Cypress/*/Cypress/resources/app/packages/server/config/app.yml && npm run cy:run"
+          command: >
+            sed -i -e 's|api_url:.*$|api_url: "http://sorry-cypress-tdc-33050344.sa-east-1.elb.amazonaws.com:8080/"|g' /home/runner/.cache/Cypress/*/Cypress/resources/app/packages/server/config/app.yml && npm run cy:run
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
