--- a/.github/workflows/action-cy-dashboard.yml
+++ b/.github/workflows/action-cy-dashboard.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
         id: cypress
