--- a/.github/workflows/action-cy-dashboard.yml
+++ b/.github/workflows/action-cy-dashboard.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+          java-package: jre
 
       - name: Cypress run
         uses: cypress-io/github-action@v2
