--- a/.github/workflows/action-sorry-cypress.yml
+++ b/.github/workflows/action-sorry-cypress.yml
@@ -24,7 +24,7 @@ jobs:
           parallel: true
           ci-build-id: '${{ github.sha }}-${{ github.workflow }}-${{ github.event_name }}'
           command: >
-            sed -i -e 's|api_url:.*$|api_url: "http://sorry-cypress-tdc-33050344.sa-east-1.elb.amazonaws.com:8080/"|g' /home/runner/.cache/Cypress/*/Cypress/resources/app/packages/server/config/app.yml && npm run cy:run
+            sed -i -e 's|api_url:.*$|api_url: "${{ secrets.CYPRESS_DIRECTOR_URL }}/"|g' /home/runner/.cache/Cypress/*/Cypress/resources/app/packages/server/config/app.yml && npm run cy:run
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -34,10 +34,12 @@ jobs:
           echo Cypress finished with: ${{ steps.cypress.outcome }}
           echo See results at ${{ steps.cypress.outputs.dashboardUrl }}
 
+      - name: Generate report
+        run: npm run allure:report
+
       - name: Publish gh-pages
         uses: JamesIves/github-pages-deploy-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: mochawesome-report
-          BUILD_SCRIPT: npm run report:generate
+          FOLDER: allure-report
