--- a/.github/workflows/action-sorry-cypress.yml
+++ b/.github/workflows/action-sorry-cypress.yml
@@ -23,8 +23,9 @@ jobs:
           record: true
           parallel: true
           ci-build-id: '${{ github.sha }}-${{ github.workflow }}-${{ github.event_name }}'
-          command: >
-            sed -i 's/https:\/\/api.cypress.io/${{ secrets.CYPRESS_DIRECTOR_URL }}/' /home/runner/.cache/Cypress/*/Cypress/resources/app/packages/server/config/app.yml && npm run cy:run
+          command: |
+            sed -i "s/https:\/\/api.cypress.io/${{ secrets.CYPRESS_DIRECTOR_URL }}/" /home/runner/.cache/Cypress/*/Cypress/resources/app/packages/server/config/app.yml
+            npm run cy:run
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
