--- a/.github/workflows/action-sorry-cypress.yml
+++ b/.github/workflows/action-sorry-cypress.yml
@@ -24,7 +24,7 @@ jobs:
           parallel: true
           ci-build-id: '${{ github.sha }}-${{ github.workflow }}-${{ github.event_name }}'
           command: |
-            sed -i -f sorry-cypress.sed /home/runner/.cache/Cypress/4.10.0/resources/app/packages/server/config/app.yml
+            find /home/runner/.cache/Cypress -name "app.yml" -exec sed -i -f sorry-cypress.sed {} \;
             npm run cy:run
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
